--- a/style.css
+++ b/style.css
@@ -244,6 +244,11 @@ These are SCSS constants which will not effect the final product and are
 
 .wp-block-button {
   padding: 1em;
+  /* For some godforsaken reason, wordpress wraps EVERY button in a fucking
+  div that doesn't center properly. This is bad practice but I'm FORCING it to a
+  flexbox alignment and centering the content */
+  display: flex !important;
+  justify-content: center;
 }
 
 .wp-block-button > *:hover {
